--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,25 @@
   </head>
 
   <body>
+    <header>
+      <% if user_signed_in? %>
+        <li>
+        <%= link_to 'Post#new', new_post_path %>
+        </li>
+        <li>
+          <%= link_to 'User#show', user_path(current_user.id) %>    </li>
+        <li>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to "新規登録", new_user_registration_path %>
+        </li>
+        <li>
+          <%= link_to "ログイン", new_user_session_path %>
+        </li>
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
