--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,10 @@
     <header>
       <% if user_signed_in? %>
         <li>
-        <%= link_to 'Post#new', new_post_path %>
-        </li>
+        <%= link_to 'Post', new_post_path %></li>
         <li>
-          <%= link_to 'User#show', user_path(current_user.id) %>    </li>
+        <%= link_to 'MyPage', user_path(current_user.id) %></li>
+
         <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
         </li>
