--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,13 @@
 <h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<% @post.each do |post| %>
+  <div>
+    <%= link_to post_path(post.id) do %>
+    <p><%= image_tag post.user.get_profile_image(100,100) %></p>
+    <p><%= post.user.name %></p>
+    <p><%= post.title %></p>
+    <p><%= post.content %></p>
+    <p><%= image_tag post.get_image %></p>
+    <p>LTU: <%= post.created_at.strftime('%Y/%m/%d') %></p>
+    <% end %>
+  </div>
+<% end %>
