--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,18 @@
 <h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+  <div>
+    <p><%= image_tag @post.user.get_profile_image(100,100) %></p>
+    <p><%= @post.user.name %></p>
+    <p><%= @post.title %></p>
+    <p><%= @post.content %></p>
+    <p><%= image_tag @post.get_image %></p>
+    <p>LTU: <%= @post.created_at.strftime('%Y/%m/%d') %></p>
+    
+    <p>Status
+    <%= link_to @post.status, post_toggle_status_path(@post), method: :patch %>
+    </p>
+    
+    <% if @post.user == current_user %>
+      <%= link_to "delete", post_path(@post), method: :delete %>
+    <% end %>
+    
+  </div>
