--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Posts#index</h1>
-<% @post.each do |post| %>
+<% @posts.each do |post| %>
   <div>
     <%= link_to post_path(post.id) do %>
     <p><%= image_tag post.user.get_profile_image(100,100) %></p>
@@ -8,6 +8,7 @@
     <p><%= post.content %></p>
     <p><%= image_tag post.get_image %></p>
     <p>LTU: <%= post.created_at.strftime('%Y/%m/%d') %></p>
+    <p><%= link_to "#{post.post_comments.count} Comments", post_path(post.id) %></p>
     <% end %>
   </div>
 <% end %>
