--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,49 @@
 <h1>Posts#show</h1>
   <div>
     <p><%= image_tag @post.user.get_profile_image(100,100) %></p>
-    <p><%= @post.user.name %></p>
+    <p><%= link_to @post.user.name, user_path(@post.user) %></p>
     <p><%= @post.title %></p>
     <p><%= @post.content %></p>
     <p><%= image_tag @post.get_image %></p>
     <p>LTU: <%= @post.created_at.strftime('%Y/%m/%d') %></p>
     
-    <p>Status
-    <%= link_to @post.status, post_toggle_status_path(@post), method: :patch %>
-    </p>
     
     <% if @post.user == current_user %>
       <%= link_to "delete", post_path(@post), method: :delete %>
+      <%= link_to "edit", edit_post_path(@post) %>
+      <%= link_to @post.status, post_toggle_status_path(@post), method: :patch %>
     <% end %>
     
+    <% if @post.favorited_by?(current_user) %>
+      <p>
+        <%= link_to post_favorite_path(@post), method: :delete do %>
+          ♥<%= @post.favorites.count %>
+        <% end %>
+      </p>
+      <% else %>
+      <p>
+        <%= link_to post_favorite_path(@post), method: :post do %>
+          ♡<%= @post.favorites.count %>
+        <% end %>
+      </p>  
+    <% end %>
+  </div>
+  
+  <div>
+    <p>Comments：<%= @post.post_comments.count %></p>
+    <% @post.post_comments.each do |post_comment| %>
+      <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
+      <%= post_comment.user.name %>
+      <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+      <% if post_comment.user == current_user %>
+      <%= link_to "delete", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+      <% end %>
+    <% end %>
+  </div>
+  
+  <div>
+    <%= form_with model: [@post, @post_comment] do |f| %>
+      <%= f.text_area :comment, rows: '5', placeholder: "Leave a comment" %>
+      <%= f.submit "comment" %>
+    <% end %>
   </div>
