--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
   <body>
     <header>
+      <h1><a href="/">継続はちから</a></h1>
       <% if user_signed_in? %>
         <li><%= link_to 'About', about_path %></li>
         <li><%= link_to 'Postindex', posts_path %></li>
