--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,15 @@
 <h1>Posts#new</h1>
+
+<% if @post.errors.any? %>
+  <%= @post.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+
 <%= form_with model: @post do |f| %>
   <h4>Title</h4>
   <%= f.text_field :title %>
@@ -10,3 +21,4 @@
   <%= f.submit 'POST' %>
 
 <% end %>
+
