--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,8 @@
 <h1>継続はちからTOP</h1>
+
+<h2>検索</h2>
+<%= form_tag(search_results_posts_path, method: :get) do %>
+  <%= text_field_tag :search %>
+  <%= submit_tag 'Search', name: nil %>
+<% end %>
+
