--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,7 +14,7 @@
   <h4>Title</h4>
   <%= f.text_field :title %>
   <h4>Content</h4>
-  <%= f.text_area :content %>
+  <%= f.text_area :content, placeholder: "今日はどうする？どうだった" %>
   <h4>Image</h4>
   <%= f.file_field :image, accept: "image/*" %>
 
