--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -1,10 +1,5 @@
-<h1>全ユーザー一覧</h1>
+<h2>管理者メニュー</h2>
 <ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= user.name %> - <%= user.email %>
-      <!-- リンクを追加 -->
-      <%= link_to '削除', admin_user_path(user), method: :delete, data: { confirm: '本当に削除しますか？' } %> 
-    </li>
-  <% end %>
+    <li><%= link_to 'ユーザー一覧', admin_users_path %></li>
+    <li><%= link_to 'コメント一覧', admin_post_comments_path %></li>
 </ul>
