--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,35 @@
-<h2>Sign up</h2>
-
-  <%= form_with model: @user, url: user_registration_path do |f| %>
-  
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-  <%= f.label :name %><br>
-  <%= f.text_field :name %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>新規登録</title>
+  <style>
+    .form-container { 
+      padding: 50px; 
+    }
+  </style>
+</head>
+<body>
+  <div class="row justify-content-center">
+    <div class="col-md-6 form-container">
+      <h3 class="page-header">新規登録する</h3>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+        <div class="form-group">
+          <p><%= f.label :email , "メールアドレス"%></p>
+          <p><%= f.email_field :email, class: "form-control" %></p>
+        </div>
+        <div class="form-group">
+          <p><%= f.label :password,"パスワード" %></p>
+          <p><%= f.password_field :password, class: "form-control" %></p>
+        </div>
+        <div class="form-group">
+          <p><%= f.label :password_confirmation, "パスワード（再入力）" %></p>
+          <p><%= f.password_field :password_confirmation, class: "form-control" %></p>
+        </div>
+        <div class="form-group">
+          <p><%= f.submit "登録する", class: "btn btn-primary" %></p>
+        </div>
+      <% end %>
+    </div>
   </div>
-  
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</body>
+</html>
