--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <%= render "devise/shared/error_messages", resource: resource %>
   <title>新規登録</title>
   <style>
     .form-container { 
@@ -12,14 +13,21 @@
   <div class="row justify-content-center">
     <div class="col-md-6 form-container">
       <h3 class="page-header">新規登録する</h3>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+      <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>>
+        <div class="form-group">
+          <p><%= f.label :name , "ユーザー名"%></p>
+          <p><%= f.text_field :name, class: "form-control" %></p>
+        </div>
         <div class="form-group">
           <p><%= f.label :email , "メールアドレス"%></p>
           <p><%= f.email_field :email, class: "form-control" %></p>
         </div>
         <div class="form-group">
           <p><%= f.label :password,"パスワード" %></p>
-          <p><%= f.password_field :password, class: "form-control" %></p>
+          <p><% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> 文字以上)</em>
+            <% end %>
+            <%= f.password_field :password, class: "form-control" %></p>
         </div>
         <div class="form-group">
           <p><%= f.label :password_confirmation, "パスワード（再入力）" %></p>
