--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,10 @@
                 <%= image_tag('logo.png', width: '90pt', height: '90pt') %>
               </a>
 
-              <%= form_tag(search_results_posts_path, method: :get, class: "form-inline my-2 my-lg-0") do %>
-                <%= text_field_tag :search, params[:search], class: "form-control mr-sm-2", placeholder: "投稿をさがそう", aria: { label: "検索" } %>
-                <%= submit_tag "検索", class: "btn btn-outline-success my-2 my-sm-0", name: nil %>
-              <% end %>
+              <!--<%= form_tag(search_results_posts_path, method: :get, class: "form-inline my-2 my-lg-0") do %>-->
+              <!--  <%= text_field_tag :search, params[:search], class: "form-control mr-sm-2", placeholder: "投稿をさがそう", aria: { label: "検索" } %>-->
+              <!--  <%= submit_tag "検索", class: "btn btn-outline-success my-2 my-sm-0", name: nil %>-->
+              <!--<% end %>-->
 
               <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
