--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -10,7 +10,6 @@
     <% if @post.user == current_user %>
       <%= link_to "delete", post_path(@post), method: :delete %>
       <%= link_to "edit", edit_post_path(@post) %>
-      <%= link_to @post.status, post_toggle_status_path(@post), method: :patch %>
     <% end %>
     
     <% if @post.favorited_by?(current_user) %>
@@ -35,7 +34,7 @@
       <%= post_comment.user.name %>
       <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
       <% if post_comment.user == current_user %>
-      <%= link_to "delete", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+      <%= link_to "削除する", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
       <% end %>
     <% end %>
   </div>
@@ -46,3 +45,6 @@
       <%= f.submit "comment" %>
     <% end %>
   </div>
+  
+  
+<div>
