--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -13,7 +13,7 @@
   <div class="row justify-content-center">
     <div class="col-md-6 form-container">
       <h3 class="page-header">新規登録する</h3>
-      <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>>
+      <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
         <div class="form-group">
           <p><%= f.label :name , "ユーザー名"%></p>
           <p><%= f.text_field :name, class: "form-control" %></p>
