--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,30 +1,66 @@
-<h2>My Page</h2>
+
 <div>
-  <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
 
-  <% if current_user.following?(@user) %>
-    <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %>
-  <% else %>
-    <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
-  <% end %>
+
+  <p><%= @user.name %></p>
+
 
   <% if @user == current_user %>
-    <%= link_to 'MyPage', user_path(current_user.id) %>
-    <%= render 'public/relationships/follow_list' %>
-    <%= link_to "Profile Edit", edit_user_path(@user) %>
-    <%= link_to "Withdrawal", user_path(@user), method: :delete, data: {confirm: "本当にアカウントを削除しますか？"} %>
+    <%= link_to "プロフィールを変更する", edit_user_path(@user) %>|
+    <%= link_to "グループ一覧",groups_path %>|
+    <%= link_to "グループを作成する",new_group_path %> |
+    <%= render 'public/relationships/follow_list',followings:@followings %>
+  <% else %>
+    <% if current_user.following?(@user) %>
+      <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
+    <% end %>
   <% end %>
-  
-  <%=link_to "グループを作成する",new_group_path %> | 
-  <%=link_to "グループ一覧",groups_path %>
-  
 </div>
 
-<% @posts.each do |post| %>
-  <div>
-    <h4><%= post.title %></h4>
-    <p><%= post.content %></p>
-    <%= link_to "Edit", edit_post_path(post) %>
+
+
+<div class="card-list-container py-5">
+  <% @posts.each do |post| %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <%= link_to post_path(post.id) do %>
+      <%= image_tag post.get_image, class: "card-img-top"; %>
+    <% end %>
+
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <%= image_tag post.user.get_profile_image(45,45), class: "mt-3 rounded-circle"; %>
+        </div>
+
+        <div class="col-10">
+            <p class="card-title">
+              <%= link_to(post_path(post.id), class: "text-dark") do %>
+                <strong><i class="far fa-flag"></i><span> <%= post.user.name %></span></strong>
+              <% end %>
+            </p>
+
+            <p class="card-text">投稿：<%= post.created_at.strftime('%Y/%m/%d') %></p>
+            <p class="card-text"><%= post.content %></p>
+
+            <span>
+              <i class="fas fa-user"></i> By <%= post.user.name %> ｜
+            </span>
+            <% if current_user %>
+              <span>
+               <%= render "public/favorites/favorite_btn", post: post %>｜
+              </span>
+            <% end %>
+            <span>
+              <%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class: "text-dark" %>
+            </span>
+          
+          <%= link_to "編集する", edit_post_path(post) %>
+        </div>
+      </div>
+    </div>
   </div>
-<% end %>
+  <% end %>
+</div>
