--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -2,4 +2,5 @@
 <ul>
     <li><%= link_to 'ユーザー一覧', admin_users_path %></li>
     <li><%= link_to 'コメント一覧', admin_post_comments_path %></li>
+    <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete %></li>
 </ul>
