--- a/app/views/public/groups/new.html.erb
+++ b/app/views/public/groups/new.html.erb
@@ -14,16 +14,9 @@
             <% end %>
           </ul>
         <% end %>
-        <%= form_with model: @group do |f| %>
-          
-          <div class="input-group mb-3 mt-4">
-            <%= f.text_field :name, class: "form-control", placeholder: "name" %>
-          </div>
-          <%= f.text_area :introduction, class: "form-control", rows: "3", placeholder: "introduction" %>
-          <%= f.file_field :group_image, accept: "image/*", class: "w-100" %>
-          <hr>
-          <%= f.submit 'create', class: "btn btn-lg btn-block btn-info mt-4" %>
-        <% end %>
+        
+        <%= render 'public/groups/form', group: @group %>
+        
       </div>
     </div>
   </div>
