--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,10 +1,18 @@
-<h1>継続はちからTOP</h1>
+<br>
+<br>
+  <div class="btn-wrapper col-10 mx-auto">
+    <div class="row">
+      <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
+    </div>
 
-<h2>検索</h2>
-<%= form_tag(search_results_posts_path, method: :get) do %>
-  <%= text_field_tag :search %>
-  <%= submit_tag 'Search', name: nil %>
-<% end %>
-
+    <div class="row">
+      <%= link_to "ログイン",new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
+    </div>
+    <div class="row">
+      <%= link_to "新規登録",new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
+    </div>
+  </div>
+<br>
+<br>
 
 
