--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,46 +1,55 @@
-<div class="card-list-container py-5">
-  <% posts.each do |post| %>
-  <div class="card w-50 mx-auto mt-4 shadow-lg">
+<div class="py-3 bg-light">
+  <% posts.reverse.each do |post| %>
+  <div class="container mx-auto">
     <%= link_to post_path(post.id) do %>
-      <%= image_tag post.get_image, class: "card-img-top"; %>
+      <%= image_tag post.get_image %>
     <% end %>
 
-    <div class="card-body">
-      <div class="row">
+    <div class="row mx-auto">
         <div class="col-2">
           <%= image_tag post.user.get_profile_image(45,45), class: "mt-3 rounded-circle"; %>
         </div>
 
-        <div class="col-10">
-          <p class="card-title">
+        <div class="col-11">
+          <p>
             <%= link_to(post_path(post.id), class: "text-dark") do %>
-              <strong><i class="far fa-flag"></i><span> <%= post.user.name %></span></strong>
+              <strong><i class="far fa-flag"></i><%= post.user.name %></span></strong>
             <% end %>
           </p>
 
-          <p class="card-text">投稿：<%= post.created_at.strftime('%Y/%m/%d') %></p>
-          <p class="card-text"><%= post.content %></p>
+          <p>投稿：
+            <%= post.created_at.strftime('%Y/%m/%d') %>
+          </p>
+          
+          <p>
+              <%= post.content %>
+          </p>
+          
+        <div class="col-0">
 
-          <span>
-            <i class="fas fa-user"></i> By <%= post.user.name %> ｜
-          </span>
+          
           <% if current_user %>
           <span>
              <%= render "public/favorites/favorite_btn", post: post %>｜
           </span>
           <% end %>
+          
           <span>
-            <%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class: "text-dark" %>
+            <%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class: "text-dark" %>｜
           </span>
 
           <% if post.user == current_user %>
           <span>
-            <%= link_to "編集する", edit_post_path(post) %>
+            <%= link_to "投稿を編集", edit_post_path(post) %>
           </span>
           <% end %>
+          <br>
+          <br>
+          
+        </div>
         </div>
       </div>
     </div>
+    <% end %>
   </div>
-  <% end %>
-</div>
+
