--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
-  <div class="row no-gutters">
-    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+  <div class="row">
+    <div class="col-8 shadow-none rounded px-0 my-5">
       <h5 class="text-dark bg-light p-4 mb-0">新規投稿</h5>
       <div class="form-body p-4">
         <% if @post.errors.any? %>
@@ -14,16 +14,7 @@
             <% end %>
           </ul>
         <% end %>
-        <%= form_with model: @post do |f| %>
-          
-          <div class="input-group mb-3 mt-4">
-            <%= f.text_field :title, class: "form-control", placeholder: "タイトル" %>
-          </div>
-          <%= f.text_area :content, class: "form-control", rows: "3", placeholder: "投稿" %>
-          <%= f.file_field :image, accept: "image/*", class: "w-100" %>
-          <hr>
-          <%= f.submit '投稿', class: "btn btn-lg btn-block btn-info mt-4" %>
-        <% end %>
+        <%= render 'public/posts/form', post: @post %>
       </div>
     </div>
   </div>
