--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Posts#show</h1>
+<h1>投稿詳細</h1>
   <div>
     <p><%= image_tag @post.user.get_profile_image(100,100) %></p>
     <p><%= link_to @post.user.name, user_path(@post.user) %></p>
@@ -9,7 +9,7 @@
     
     <% if @post.user == current_user %>
       <%= link_to "delete", post_path(@post), method: :delete %>
-      <%= link_to "edit", edit_post_path(@post) %>
+      <%= link_to "投稿編集", edit_post_path(@post) %>
     <% end %>
     
     <% if @post.favorited_by?(current_user) %>
