--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -4,13 +4,16 @@
 
 
   <p><%= @user.name %></p>
+  
 
 
   <% if @user == current_user %>
-    <%= link_to "プロフィールを変更する", edit_user_path(@user) %>|
-    <%= link_to "グループ一覧",groups_path %>|
-    <%= link_to "グループを作成する",new_group_path %> |
-    <%= render 'public/relationships/follow_list',followings:@followings %>
+    <% unless @user.guest_user?%>
+      <%= link_to "プロフィールを変更する", edit_user_path(@user) %>|
+      <%= link_to "グループ一覧",groups_path %>|
+      <%= link_to "グループを作成する",new_group_path %> |
+      <%= render 'public/relationships/follow_list',followings:@followings %>
+    <% end %>
   <% else %>
     <% if current_user.following?(@user) %>
       <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %>
@@ -18,6 +21,8 @@
       <%= link_to "フォローする", user_relationships_path(@user.id), method: :post %>
     <% end %>
   <% end %>
+  
+
 </div>
 
 <%= render 'public/posts/index', posts: @posts %>
