--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,7 +4,7 @@
     <li>
       <%= user.name %> - <%= user.email %>
       <!-- リンクを追加 -->
-      <%= link_to '削除', admin_user_path(user), method: :delete, data: { confirm: '本当に削除しますか？' } %> 
+      <%= link_to "詳細", admin_user_path(user.id) %>
     </li>
   <% end %>
 </ul>
