--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -1,10 +1,14 @@
-
+<br>
+<div>
+   <%= link_to "新規グループを作成する",new_group_path, class: 'btn btn-info' %>
+</div>
+<br>
 
 <table class='table'>
   <thead>
     <tr>
-      <th>image</th>
-      <th>name</th>
+      <th></th>
+      <th>グループ名</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,9 +17,9 @@
       <tr>
         <td><%= image_tag group.get_image, size: '50x50' %></td>
         <td><%= group.name %></td>
-        <td><%= link_to 'Show', group, class: "group_#{group.id}" %></td>
+        <td><%= link_to '詳細', group, class: "group_#{group.id}" %></td>
         <% if group.is_owned_by?(current_user) %>
-          <td><%= link_to 'Edit', edit_group_path(group), class: "group_#{group.id}" %></td>
+          <td><%= link_to '編集', edit_group_path(group), class: "group_#{group.id}" %></td>
         <% end %>
       </tr>
     <% end %>
