--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -1,4 +1,4 @@
-    <div class='col-md-8 offset-md-1'>
+<div class='col-md-8 offset-md-1'>
       <h2>グループ</h2>
       <table class='table table-hover table-inverse'>
         <tr>
@@ -7,11 +7,9 @@
           <td><%= @group.introduction %></td>
           <td>
             <% if @group.is_owned_by?(current_user) %>
-              <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %>
+              <%= link_to '編集する', edit_group_path(@group), class: "btn btn-sm btn-success" %>
             <% end %>
           </td>
         </tr>
       </table>
-    </div>
-  </div>
-</div> 
+</div>
