--- a/app/views/public/searches/_form.html.erb
+++ b/app/views/public/searches/_form.html.erb
@@ -1,8 +1,8 @@
 <% if user_signed_in? %>
   <%= form_with url: search_path, method: :get, local: true do |f| %>
     <%= f.text_field :content %>
-    <%= f.select :model, options_for_select({ "ユーザー" => "user", "投稿" => "post", "グループ" => "group" }) %>
-    <%= f.select :method, options_for_select({ "完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward", "部分一致" => "partial" }) %>
+    <%= f.select :model, options_for_select({ "投稿" => "post", "ユーザー" => "user", "グループ" => "group" }) %>
+    <%= f.select :method, options_for_select({ "部分一致" => "partial", "完全一致" => "perfect", "前方一致" => "forward", "後方一致" => "backward" }) %>
     <%= f.submit '検索' %>
   <% end %>
 <% end %>
