--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,23 +1,42 @@
-<h2>Profile Edit</h2>
-<% if @user.errors.any? %>
-  <%= @user.errors.count %>件のエラーが発生しました
-  <ul>
-    <% @user.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_with model: @user do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"Name"%>
-  <label for="inputEmail">Email</label>
-　<%= f.email_field :email, id:"inputEmail", placeholder:"Email"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.file_field :profile_image, placeholder: "Profile Image", accept: "image/*" %>  
-  <%= f.submit "Post" %>
-<% end %>
-
-
-<%= link_to "退会する", user_path(@user), method: :delete, data: {confirm: "本当にアカウントを削除しますか？"} %>
+<div class="container">
+  <div class="row">
+    <div class="col-8 shadow-none rounded px-0 my-5">
+      <h5 class="text-dark bg-light p-4 mb-0">ユーザーの編集</h5>
+      <div class="form-body p-4">
+        <% if @user.errors.any? %>
+          <%= @user.errors.count %>件のエラーが発生しました
+          <ul>
+            <% @user.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+        <%= form_with model: @user, local: true do |f| %>
+          <div class="inputName">
+            <%= f.label :ユーザー名 %>
+            <%= f.text_field :name, class: 'form-control' %>
+          </div>
+        
+          <div class="inputEmail">
+            <%= f.label :メールアドレス%>
+            <%= f.email_field :email, class: 'form-control' %>
+          </div>
+        
+          <div class="inputImage">
+            <%= f.label :ユーザー画像 %>
+            <%= f.file_field :profile_image, class: "form-control-file", accept: 'image/*' %>
+          </div>
+          <br>
+          <div class="Post">
+            <%= f.submit class: 'btn btn-info' %>
+          </div>
+        <% end %> 
+        <br>
+        <div>
+          <%= link_to "退会する", user_path(@user), method: :delete, class: "btn btn-danger", data: {confirm: "本当にアカウントを削除しますか？"} %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> 
 
