アバウト修正、グループ機能追加

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,6 +8,10 @@
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
+<div>
+  <%= flash[:notice] %>
+</div>
+
   <% if admin_signed_in? %>
     <div class="text-right">
       <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %>
