--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,33 @@
-<h1>継続はちからABOUT</h1>
+<div>
+  <%= flash[:notice] %>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-8 shadow-none rounded px-0 my-5">
+      <h5 class="text-dark bg-light p-4 mb-0">継続はちからについて</h5>
+      <br>
+        <h6>＜一緒に勉強する社員の「ひとりで続けづらい」という声＞</h6>
+        <br>
+        <p>
+          一年間マーケティングを勉強する機会を会社からもらいました。<br>
+          勉強の教材はアプリでした。<br>
+          その教材を元に月に一回オンラインでグループワークを行いました。<br>
+          結果、全カリキュラムをやり切れたは12人中2人だけでした。<br>
+          メンバーからはひとりで進めるのは難しかったという声がありました。<br>
+        </p>
+        <br>
+        <h6>＜会社もプライベートも関わらないコミュニティが欲しい＞</h6>
+        <br>
+        <p>
+          勉強のコミュニティを社内で既に利用しているSNSで作られていました。<br>
+          しかしあまり機能しませんでした。<br>
+          メンバーからは会社の監視下のコミュニティは使いづらいと聞きました。<br>
+          だからと言ってプライベートをオープンにするのは抵抗がある。<br>
+          そこで今回このサイトの開発を進めました。<br>
+        </p>
+        <br>
+        <br>
+    </div>
+  </div>
+</div>
