--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -1,6 +1,6 @@
 <br>
 <div>
-   <%= link_to "投稿する", new_post_path, class: 'btn btn-info' %>
+   <%= link_to "投稿する", new_post_path, class: 'btn btn-success' %>
 </div>
 <br>
 
