--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -10,6 +10,10 @@
   </style>
 </head>
 <body>
+  <div>
+    <%= flash[:notice] %>
+  </div>
+
   <div class="row justify-content-center">
     <div class="col-md-6 form-container">
       <h3 class="page-header">新規登録する</h3>
