--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -1,20 +1,23 @@
   <div class="container">
     <div class="row">
     <div class="col-md-8 offset-md-1">
-      <h2>ユーザー一覧</h2>
-        <table class="table table-striped">
+    <br>
+    <h2>ユーザー一覧</h2>
+    <br>
+      <table class="table table-striped">
+        <tr>
+          <th>ユーザー</th>
+          <th></th>
+          <th></th>
+        </tr>
+        <% users.each do |user| %>
           <tr>
-            <th></th>
-            <th>ユーザー名</th>
-            <th></th>
+            <td><%= image_tag user.get_profile_image(50,50) %></td>
+            <td><%= user.name %></td>
+            <td><%= link_to "詳細", user_path(user.id), class: "btn btn-sm btn-success" %></td>
           </tr>
-          <% users.each do |user| %>
-            <tr>
-              <td><%= image_tag user.get_profile_image(50,50) %></td>
-              <td><%= user.name %></td>
-              <td><%= link_to "詳細", user_path(user.id), class: "btn btn-sm btn-success" %></td>
-            </tr>
-          <% end %>
-        </table>
-        </div>
+        <% end %>
+      </table>
       </div>
+    </div>
+  </div>
