--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -1,6 +1,6 @@
 <br>
 <div>
-   <%= link_to "新規グループを作成する",new_group_path, class: 'btn btn-info' %>
+   <%= link_to "新規グループを作成する",new_group_path, class: 'btn btn-success' %>
 </div>
 <br>
 
@@ -9,6 +9,8 @@
     <tr>
       <th></th>
       <th>グループ名</th>
+      <th>参加者数</th>
+      <th colspan="3"></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,10 +19,13 @@
       <tr>
         <td><%= image_tag group.get_image, size: '50x50' %></td>
         <td><%= group.name %></td>
-        <td><%= link_to '詳細', group, class: "group_#{group.id}" %></td>
-        <% if group.is_owned_by?(current_user) %>
-          <td><%= link_to '編集', edit_group_path(group), class: "group_#{group.id}" %></td>
-        <% end %>
+        <td><%= group.group_users.count %></td>
+        <td><%= link_to '詳細', group, class: "group_#{group.id}", class: "btn btn-sm btn-info" %></td>
+        <td>
+          <% if group.is_owned_by?(current_user) %>
+            <%= link_to '変更する', edit_group_path(group), class: "btn btn-sm btn-success" %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
