--- a/app/views/public/groups/edit.html.erb
+++ b/app/views/public/groups/edit.html.erb
@@ -1,10 +1,12 @@
+<div>
+  <%= flash[:notice] %>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-8 shadow-none rounded px-0 my-5">
       <h5 class="text-dark bg-light p-4 mb-0">グループの編集</h5>
       <div class="form-body p-4">
-        
-        
         <% if @group.errors.any? %>
           <%= @group.errors.count %>件のエラーが発生しました
           <ul>
@@ -13,7 +15,11 @@
             <% end %>
           </ul>
         <% end %>
-        <%= render 'form', group: @group %>
+        
+        <%= render 'public/groups/form', group: @group %>
+
+        <%= link_to '削除する', group_path(@group), data: { confirm: '本当に削除しますか？' }, method: :delete, class: "btn btn-danger" %>
+
       </div>
     </div>
   </div>
