--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -1,9 +1,3 @@
-<br>
-<div>
-   <%= link_to "新規グループを作成する",new_group_path, class: 'btn btn-success' %>
-</div>
-<br>
-
 <table class='table'>
   <thead>
     <tr>
@@ -15,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <% groups.each do |group| %>
+    <% groups&.each do |group| %>
       <tr>
         <td><%= image_tag group.get_image, size: '50x50' %></td>
         <td><%= group.name %></td>
