--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -6,9 +6,10 @@
   <div class="row">
     <div class="col-8 shadow-none rounded px-0 my-5">
       <h5 class="text-dark bg-light p-4 mb-0">グループの一覧 </h5>
-
-        <%= render "public/groups/index", groups: @groups%>
-  
+      <br>
+      <%= link_to "新規グループを作成する",new_group_path, class: 'btn btn-success' %>
+      <br>
+      <%= render "public/groups/index", groups: @groups%>
     </div>
   </div>
 </div> 
