--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -8,7 +8,7 @@
   <% posts.reverse.each do |post| %>
   <div class="container mx-auto">
     <%= link_to post_path(post.id) do %>
-      <%= image_tag post.get_image %>
+      <%= image_tag post.get_image(500,500) %>
     <% end %>
 
     <div class="row mx-auto">
