--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -9,7 +9,7 @@
       <div class="form-body p-4">
         <div class="py-3 bg-light">
           <div class="container mx-auto">
-            <%= image_tag @post.get_image %>
+            <%= image_tag @post.get_image(500,500) %>
             <div class="row mx-auto">
               <div class="col-2">
                 <%= image_tag @post.user.get_profile_image(45,45), class: "mt-3 rounded-circle" %>
