--- a/app/views/public/groups/_form.html.erb
+++ b/app/views/public/groups/_form.html.erb
@@ -9,10 +9,10 @@
     <%= f.text_area :introduction, class: 'form-control' %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :グループ画像 %>
-    <%= f.file_field :get_image, class: "form-control-file", accept: 'get_image/*' %>
-  </div>
+  <!--<div class="form-group">-->
+  <!--  <%= f.label :グループ画像 %>-->
+  <!--  <%= f.file_field :group_image, class: "form-control-file", accept: 'get_image/*' %>-->
+  <!--</div>-->
 
   <div class="form-group">
     <%= f.submit class: 'btn btn-info' %>
